--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --config webpack/webpack.dev.js",
+    "build": "webpack --config webpack/webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +19,19 @@
   "bugs": {
     "url": "https://github.com/billyenglish/template-webpack/issues"
   },
-  "homepage": "https://github.com/billyenglish/template-webpack#readme"
+  "homepage": "https://github.com/billyenglish/template-webpack#readme",
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.29.0",
+    "eslint-webpack-plugin": "^5.0.2",
+    "file-loader": "^6.2.0",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.1.1",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2",
+    "webpack-merge": "^6.0.1"
+  }
 }
