Continued Webpack Configuration.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
+  "homepage": "https://github.com/billyenglish/template-webpack",
   "name": "template-webpack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
-    "dev": "webpack serve --config webpack.dev.js",
-    "deploy": "git subtree push --prefix dist origin gh-pages"
+    "start": "webpack serve --config webpack.dev.js",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,9 @@
   "bugs": {
     "url": "https://github.com/billyenglish/template-webpack/issues"
   },
-  "homepage": "https://github.com/billyenglish/template-webpack#readme",
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.3.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
